fix overlap of first & last name on small devices

--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@ h1, h2, h3 {
   color: #333333;
 }
 
-#my-name {
-  line-height: 0.3em;
-}
 #my-motto {
   padding: 0 0 2em 5em;
 }
